# servertools

./: .gitignore  CMakeLists.txt  README.md  WebUrl.cpp  WebUrl.h  appconfig.cpp  appconfig.h  cml.b  face_detection_ex.cpp  git.sh  http.cpp  http.h  ini.cpp  ini.h  log.cpp  log.h  main.cpp  shell.cpp  shell.h  square.cpp  square.h  tcp.cpp  tcp.h  tcp_server.cpp  tcp_server.h  uart_server.cpp  uart_server.h  weburl.cpp
face_detection/: CMakeLists.txt
lib/: CMakeLists.txt
lib/spdlog/: README.md
lib/spdlog/example/jni/: example.cpp
shell/: allowPort.sh  check.sh  createMysqlUser.sh  deleteMysqlUser.sh  deletePort.sh  test.cpp  writeCron.sh
